New photos & text

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -145,6 +145,7 @@
                                 <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="3" aria-label="Slide 4"></button>
                                 <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="4" aria-label="Slide 5"></button>
                                 <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                                <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="6" aria-label="Slide 7"></button>
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active" data-bs-interval="5100">
@@ -175,14 +176,20 @@
                                 </div>
                                 <div class="carousel-item">
                                     <picture>
+                                        <source srcset="images/chalet/IMG_2948.webp">
+                                        <img src="images/chalet/IMG_2948.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                    </picture>
+                                </div>
+                                <div class="carousel-item">
+                                    <picture>
                                         <source srcset="images/chalet/salon.webp">
-                                        <img src="images/chalet/salon.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                        <img src="images/chalet/salon.jpg" class="d-block w-100 rounded" alt="Illustration 5">
                                     </picture>
                                 </div>
                                 <div class="carousel-item">
                                     <picture>
                                         <source srcset="images/chalet/Photos_mizoen29_oct08_028.webp">
-                                        <img src="images/chalet/Photos_mizoen29_ct08_028.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                        <img src="images/chalet/Photos_mizoen29_ct08_028.jpg" class="d-block w-100 rounded" alt="Illustration 6">
                                     </picture>
                                 </div>
                             </div>
@@ -235,32 +242,32 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <picture>
-                                            <source srcset="images/chambres/premium/IMG_2527.webp">
-                                            <img src="images/chambres/premium/IMG_2527.jpg" class="d-block w-100 rounded" alt="Illustration 1">
+                                            <source srcset="images/chambres/premium/IMG_2979.webp">
+                                            <img src="images/chambres/premium/IMG_2979.jpg" class="d-block w-100 rounded" alt="Illustration 1">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/premium/IMG_2525.webp">
-                                            <img src="images/chambres/premium/IMG_2525.jpg" class="d-block w-100 rounded" alt="Illustration 2">
+                                            <source srcset="images/chambres/premium/IMG_2993.webp">
+                                            <img src="images/chambres/premium/IMG_2993.jpg" class="d-block w-100 rounded" alt="Illustration 2">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/premium/IMG_2529.webp">
-                                            <img src="images/chambres/premium/IMG_2529.jpg" class="d-block w-100 rounded" alt="Illustration 3">
+                                            <source srcset="images/chambres/premium/IMG_2999.webp">
+                                            <img src="images/chambres/premium/IMG_2999.jpg" class="d-block w-100 rounded" alt="Illustration 3">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/premium/Sans-titre.webp">
-                                            <img src="images/chambres/premium/Sans-titre.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                            <source srcset="images/chambres/premium/IMG_3010.webp">
+                                            <img src="images/chambres/premium/IMG_3010.jpg" class="d-block w-100 rounded" alt="Illustration 4">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/premium/unnamed.webp">
-                                            <img src="images/chambres/premium/unnamed.jpg" class="d-block w-100 rounded" alt="Illustration 5">
+                                            <source srcset="images/chambres/premium/IMG_3015.webp">
+                                            <img src="images/chambres/premium/IMG_3015.jpg" class="d-block w-100 rounded" alt="Illustration 5">
                                         </picture>
                                     </div>
                                 </div>
@@ -288,24 +295,38 @@
                                     <button type="button" data-bs-target="#carousel-chambre-eco" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                                     <button type="button" data-bs-target="#carousel-chambre-eco" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                     <button type="button" data-bs-target="#carousel-chambre-eco" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    <button type="button" data-bs-target="#carousel-chambre-eco" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                    <button type="button" data-bs-target="#carousel-chambre-eco" data-bs-slide-to="4" aria-label="Slide 5"></button>
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <picture>
-                                            <source srcset="images/chambres/\economique/IMG_2546.webp">
-                                            <img src="images/chambres/\economique/IMG_2546.jpg" class="d-block w-100 rounded" alt="Illustration 1">
+                                            <source srcset="images/chambres/\economique/IMG_2952.webp">
+                                            <img src="images/chambres/\economique/IMG_2952.jpg" class="d-block w-100 rounded" alt="Illustration 1">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/\economique/IMG_2547.webp">
-                                            <img src="images/chambres/\economique/IMG_2547.jpg" class="d-block w-100 rounded" alt="Illustration 2">
+                                            <source srcset="images/chambres/\economique/IMG_2957.webp">
+                                            <img src="images/chambres/\economique/IMG_2957.jpg" class="d-block w-100 rounded" alt="Illustration 2">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/\economique/IMG_2545.webp">
-                                            <img src="images/chambres/\economique/IMG_2545.jpg" class="d-block w-100 rounded" alt="Illustration 3">
+                                            <source srcset="images/chambres/\economique/IMG_2960.webp">
+                                            <img src="images/chambres/\economique/IMG_2960.jpg" class="d-block w-100 rounded" alt="Illustration 3">
+                                        </picture>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <picture>
+                                            <source srcset="images/chambres/\economique/IMG_2973.webp">
+                                            <img src="images/chambres/\economique/IMG_2973.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                        </picture>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <picture>
+                                            <source srcset="images/chambres/\economique/IMG_2974.webp">
+                                            <img src="images/chambres/\economique/IMG_2974.jpg" class="d-block w-100 rounded" alt="Illustration 5">
                                         </picture>
                                     </div>
                                 </div>
