--- a/website/index_en.html
+++ b/website/index_en.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
     <link href="5.2.3/bootstrap.min.css" rel="stylesheet">
-    <link href="style/style.css?v=2024-04-19T16%3A20%3A56.402Z" rel="stylesheet">
+    <link href="style/style.css?v=2024-05-04T12%3A19%3A40.412Z" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
@@ -145,6 +145,7 @@
                                 <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="3" aria-label="Slide 4"></button>
                                 <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="4" aria-label="Slide 5"></button>
                                 <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                                <button type="button" data-bs-target="#carousel-chalet" data-bs-slide-to="6" aria-label="Slide 7"></button>
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active" data-bs-interval="5100">
@@ -175,14 +176,20 @@
                                 </div>
                                 <div class="carousel-item">
                                     <picture>
+                                        <source srcset="images/chalet/IMG_2948.webp">
+                                        <img src="images/chalet/IMG_2948.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                    </picture>
+                                </div>
+                                <div class="carousel-item">
+                                    <picture>
                                         <source srcset="images/chalet/salon.webp">
-                                        <img src="images/chalet/salon.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                        <img src="images/chalet/salon.jpg" class="d-block w-100 rounded" alt="Illustration 5">
                                     </picture>
                                 </div>
                                 <div class="carousel-item">
                                     <picture>
                                         <source srcset="images/chalet/Photos_mizoen29_oct08_028.webp">
-                                        <img src="images/chalet/Photos_mizoen29_ct08_028.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                        <img src="images/chalet/Photos_mizoen29_ct08_028.jpg" class="d-block w-100 rounded" alt="Illustration 6">
                                     </picture>
                                 </div>
                             </div>
@@ -240,32 +247,32 @@ My only desire: to make your stay in my chalet unforgettable, a unique experienc
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <picture>
-                                            <source srcset="images/chambres/premium/IMG_2527.webp">
-                                            <img src="images/chambres/premium/IMG_2527.jpg" class="d-block w-100 rounded" alt="Illustration 1">
+                                            <source srcset="images/chambres/premium/IMG_2979.webp">
+                                            <img src="images/chambres/premium/IMG_2979.jpg" class="d-block w-100 rounded" alt="Illustration 1">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/premium/IMG_2525.webp">
-                                            <img src="images/chambres/premium/IMG_2525.jpg" class="d-block w-100 rounded" alt="Illustration 2">
+                                            <source srcset="images/chambres/premium/IMG_2993.webp">
+                                            <img src="images/chambres/premium/IMG_2993.jpg" class="d-block w-100 rounded" alt="Illustration 2">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/premium/IMG_2529.webp">
-                                            <img src="images/chambres/premium/IMG_2529.jpg" class="d-block w-100 rounded" alt="Illustration 3">
+                                            <source srcset="images/chambres/premium/IMG_2999.webp">
+                                            <img src="images/chambres/premium/IMG_2999.jpg" class="d-block w-100 rounded" alt="Illustration 3">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/premium/Sans-titre.webp">
-                                            <img src="images/chambres/premium/Sans-titre.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                            <source srcset="images/chambres/premium/IMG_3010.webp">
+                                            <img src="images/chambres/premium/IMG_3010.jpg" class="d-block w-100 rounded" alt="Illustration 4">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/premium/unnamed.webp">
-                                            <img src="images/chambres/premium/unnamed.jpg" class="d-block w-100 rounded" alt="Illustration 5">
+                                            <source srcset="images/chambres/premium/IMG_3015.webp">
+                                            <img src="images/chambres/premium/IMG_3015.jpg" class="d-block w-100 rounded" alt="Illustration 5">
                                         </picture>
                                     </div>
                                 </div>
@@ -294,24 +301,38 @@ The decoration will surprise you with its mountain inspiration.
                                     <button type="button" data-bs-target="#carousel-chambre-eco" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                                     <button type="button" data-bs-target="#carousel-chambre-eco" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                     <button type="button" data-bs-target="#carousel-chambre-eco" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    <button type="button" data-bs-target="#carousel-chambre-eco" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                    <button type="button" data-bs-target="#carousel-chambre-eco" data-bs-slide-to="4" aria-label="Slide 5"></button>
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <picture>
-                                            <source srcset="images/chambres/\economique/IMG_2546.webp">
-                                            <img src="images/chambres/\economique/IMG_2546.jpg" class="d-block w-100 rounded" alt="Illustration 1">
+                                            <source srcset="images/chambres/\economique/IMG_2952.webp">
+                                            <img src="images/chambres/\economique/IMG_2952.jpg" class="d-block w-100 rounded" alt="Illustration 1">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/\economique/IMG_2547.webp">
-                                            <img src="images/chambres/\economique/IMG_2547.jpg" class="d-block w-100 rounded" alt="Illustration 2">
+                                            <source srcset="images/chambres/\economique/IMG_2957.webp">
+                                            <img src="images/chambres/\economique/IMG_2957.jpg" class="d-block w-100 rounded" alt="Illustration 2">
                                         </picture>
                                     </div>
                                     <div class="carousel-item">
                                         <picture>
-                                            <source srcset="images/chambres/\economique/IMG_2545.webp">
-                                            <img src="images/chambres/\economique/IMG_2545.jpg" class="d-block w-100 rounded" alt="Illustration 3">
+                                            <source srcset="images/chambres/\economique/IMG_2960.webp">
+                                            <img src="images/chambres/\economique/IMG_2960.jpg" class="d-block w-100 rounded" alt="Illustration 3">
+                                        </picture>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <picture>
+                                            <source srcset="images/chambres/\economique/IMG_2973.webp">
+                                            <img src="images/chambres/\economique/IMG_2973.jpg" class="d-block w-100 rounded" alt="Illustration 4">
+                                        </picture>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <picture>
+                                            <source srcset="images/chambres/\economique/IMG_2974.webp">
+                                            <img src="images/chambres/\economique/IMG_2974.jpg" class="d-block w-100 rounded" alt="Illustration 5">
                                         </picture>
                                     </div>
                                 </div>
@@ -328,10 +349,10 @@ The decoration will surprise you with its mountain inspiration.
                         <div class="card-body">
                             <h3 class="card-title">Standard Rooms</h3>
                             <p>
-                                I wanted to offer everyone the possibility of staying at the chalet.
-Also I created Standard rooms at low prices.
-These rooms offer you pleasant comfort with quality bedding and cotton bed linen.
-Most of the bathrooms have been renovated and one bedroom offers you the possibility of staying with 3 occupants.
+                                I want to give everyone the opportunity to stay at the Chalet by creating Standard rooms at low rates.
+These comfortable rooms with Ecocert cotton bed sheets also offer you the opportunity to try the “Scandinavian style", each having their own bed.
+These rooms without balconies have a view to the side or rear of the Chalet.
+The bathrooms have been renovated.
                             </p>
                         </div>
                     </div>
@@ -1029,7 +1050,7 @@ Just like cultural activities, guided tours or artistic workshops.
 
     <script src="5.2.3/bootstrap.bundle.min.js"></script>
     <script src="5.2.3/bs5-lightbox@1.8.3/index.bundle.min.js"></script>
-    <script src="script/page.js?v=2024-04-19T16%3A20%3A56.402Z"></script>
+    <script src="script/page.js?v=2024-05-04T12%3A19%3A40.412Z"></script>
 </body>
 
 </html>
